--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
+  "name": "naturalclar.dev",
+  "version": "0.0.1",
+  "description": "My Portfolio Site",
+  "repository": "git@github.com:Naturalclar/naturalclar.dev.git",
+  "license": "MIT",
+  "author": "Jesse Katsumata <jesse.katsumata@gmail.com>",
+  "main": "index.js",
+  "scripts": {
+    "build": "next build",
+    "dev": "next",
+    "start": "next start",
+    "export": "next export && cp -r extra/ out"
+  },
   "dependencies": {
     "next": "^9.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
-  },
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
   },
   "devDependencies": {
     "@types/node": "^12.6.8",
