--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ jobs:
           name: Install dependencies
           command: yarn
       - run:
+          name: Build Next Page
+          command: yarn build
+      - run:
           name: Export Next Page
           command: yarn export
       - save_cache:
