fix:deploy script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "build": "next build",
-    "deploy": "gh-pages -d out -b gh-pages",
+    "deploy": "gh-pages -d out -o gh-pages -b master",
     "dev": "next",
     "export": "next export && cp -r extra/ out",
     "start": "next start"
