--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^9.0.2",
+    "next": "^9.0.5",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@types/node": "^12.6.8",
