--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   },
   "dependencies": {
     "next": "^9.2.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "styled-components": "^4.3.2"
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "styled-components": "5.0.1"
   },
   "devDependencies": {
-    "@types/node": "^12.6.8",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
+    "@types/node": "13.7.1",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
     "gh-pages": "^2.0.1",
-    "typescript": "^3.5.3"
+    "typescript": "3.7.5"
   }
 }
