--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "13.7.1",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "@types/styled-components":"4.4.3",
     "gh-pages": "^2.0.1",
     "typescript": "3.7.5"
   }
