--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/cache@v1.1.2
         with:
           path: ${{ steps.yarn.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles(format('{0}{1}', github.workspace, '/website/yarn.lock')) }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
 
       - name: Install packages
         run: yarn --frozen-lockfile
