--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install packages
         run: yarn --frozen-lockfile
 
+      - name: Build Website
+        run: yarn build
+        
       - name: Prepare Deploy
         run: yarn export
 
