--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -52,5 +52,5 @@ jobs:
         run: |
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --global user.name "${GITHUB_ACTOR}"
-          echo "machine github.com login ${GITHUB_ACTOR} password ${{ secrets.GITHUB_TOKEN }}" > ~/.netrc
+          echo "machine github.com login ${GITHUB_ACTOR} password ${{ secrets.GH_TOKEN }}" > ~/.netrc
           yarn deploy
