--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "deploy": "gh-pages -d out -o gh-pages -b master",
     "dev": "next",
     "export": "next export && cp -r extra/* out",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^9.2.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "styled-components": "5.0.1"
+    "next": "^9.5.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@types/node": "13.7.1",
-    "@types/react": "16.9.19",
-    "@types/react-dom": "16.9.5",
-    "@types/styled-components":"4.4.3",
+    "@types/node": "^14.10.1",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.3",
     "gh-pages": "^2.0.1",
-    "typescript": "3.7.5"
+    "typescript": "^4.0.2"
   }
 }
