--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^9.5.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "next": "^13.4.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
@@ -27,5 +27,8 @@
     "@types/styled-components": "^5.1.3",
     "gh-pages": "^2.0.1",
     "typescript": "^4.0.2"
+  },
+  "volta": {
+    "node": "16.19.0"
   }
 }
