--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,14 +1,13 @@
 name: CI
 
-on:
-  push
+on: push
 
 jobs:
   ci:
     runs-on: ubuntu-latest
 
     env:
-      node-version: 12.x
+      node-version: 20.x
 
     steps:
       - name: Checkout code
@@ -20,17 +19,17 @@ jobs:
           node-version: ${{ env.node-version }}
 
       - name: Get yarn cache directory
-        id: yarn
+        id: pnpm
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Restore yarn cache
+      - name: Restore pnpm cache
         uses: actions/cache@v1.1.2
         with:
-          path: ${{ steps.yarn.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles(format('{0}{1}', github.workspace, '/yarn.lock')) }}
+          path: ${{ steps.pnpm.outputs.dir }}
+          key: ${{ runner.os }}-pnpm-${{ hashFiles(format('{0}{1}', github.workspace, '/pnpm-lock.yaml')) }}
 
       - name: Install packages
-        run: yarn --frozen-lockfile
+        run: pnpm i --frozen-lockfile
 
       - name: Test Build
-        run: yarn build
+        run: pnpm build
