--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -23,12 +23,16 @@ jobs:
         with:
           node-version: ${{ env.node-version }}
 
-      - name: Get yarn cache directory
-        id: yarn
-        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - name: Get pnpm cache directory
+        id: pnpm
+        run: echo "::set-output name=dir::$(pnpm store path)"
 
-      - name: Restore yarn cache
-        uses: actions/cache@v1.1.2
+      - name: Restore pnpm cache
+        uses: actions/cache@v3
         with:
           path: ${{ steps.pnpm.outputs.dir }}
           key: ${{ runner.os }}-pnpm-${{ hashFiles(format('{0}{1}', github.workspace, '/pnpm-lock.yaml')) }}
