--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -57,4 +57,4 @@ jobs:
           git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git config --global user.name "${GITHUB_ACTOR}"
           echo "machine github.com login ${GITHUB_ACTOR} password ${{ secrets.GH_TOKEN }}" > ~/.netrc
-          pnpm deploy
+          pnpm run deploy
