--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,26 +11,18 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2.0.0
-
-      - name: Use Node.js ${{ env.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.node-version }}
+        uses: actions/checkout@v4
 
       - name: Setup PNPM
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
-          version: 8
-      - name: Get pnpm cache directory
-        id: pnpm
-        run: echo "::set-output name=dir::$(pnpm store path)"
+          version: 9
 
-      - name: Restore pnpm cache
-        uses: actions/cache@v3
+      - name: Use Node.js ${{ env.node-version }}
+        uses: actions/setup-node@v4
         with:
-          path: ${{ steps.pnpm.outputs.dir }}
-          key: ${{ runner.os }}-pnpm-${{ hashFiles(format('{0}{1}', github.workspace, '/pnpm-lock.yaml')) }}
+          node-version: ${{ env.node-version }}
+          cache: 'pnpm'
 
       - name: Install packages
         run: pnpm install --frozen-lockfile
